	fixing bug #666
	* codegen.c, cobc.c, tree.h: split (codegen) into
	  (codegen_init, codegen_internal, codegen_finalize);
	  moved more initialization to codegen_init;
	  limit variable scope and use of static variables

2020-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* config.def: added possible values for assign-clause and
	  screen-section-rules.

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, typeck.c: added support for JSON-C as JSON handler

2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	fixed bug #663
	* scanner.l: add EQUALS as alias for EQUAL in conditions
	* typeck.c: fixed segfault with parens around condition word

	* config.c, config.def, cobc.h, typeck.c: added dpc-in-data conf option
	* pplex.l, ppparse.y: added corresponding SET DPC-IN-DATA directive

2020-07-09  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (is_reserved_word): fixed division by zero when called
	  before reserved words list has been initialised (bug #659). Thanks
	  to Paul Smith for fix.

2020-07-08  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (scan_x): fixed #658 by building a national literal for nx''

2020-07-07  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_local_field_cache): prevent empty declaration
	  and additional comment after report OCCURS fields

2020-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, scanner.l: fixed memory issues.

2020-07-07  Simon Sobisch <simonsobisch@gnu.org>

	FR #53 TURN directive
	* cobc.c (turn_ec_io): fixed case-sensitivity in filename comparison

2020-07-06  Simon Sobisch <simonsobisch@gnu.org>

	FR #359 Realia / OSVS / MSCOBOL compatibility
	* parser.y, cobc.h, reserved.c, tree.c, tree.h: added partial
	  support for EXHIBIT (full parsing, without CHANGED + UPON)

2020-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, config.def: added vsam-status config option.

2020-07-03  Edward Hart <edward.dan.hart@gmail.com>
