@@ -5024,99 +5024,6 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 AT_CLEANUP
 
 
-AT_SETUP([Conditional/define directives (5)])
-AT_KEYWORDS([extensions directive])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       PROCEDURE        DIVISION.
-       >>IF ACTIVATE DEFINED
-       >>DISPLAY NOTOK
-       >>ELIF ACTIVATE2 DEFINED
-       >>DISPLAY OK
-       >>ELSE
-       >>DISPLAY NOTOK
-       >>END-IF
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE -DACTIVATE2 prog.cob], [0],
-[OK
-])
-AT_CLEANUP
-
-
-AT_SETUP([Conditional/define directives (6)])
-AT_KEYWORDS([extensions directive])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION DIVISION.
-       PROGRAM-ID.    prog.
-       PROCEDURE      DIVISION.
-       >>IF X DEFINED
-         >>DISPLAY X defined
-       >>ELSE
-         >>DISPLAY X not defined
-         >>DEFINE X 1
-       >>END-IF
-           CONTINUE
-           .
-])
-
-AT_CHECK([$COMPILE -D X prog.cob], [0],
-[X defined
-])
-AT_CHECK([$COMPILE prog.cob], [0],
-[X not defined
-])
-AT_CLEANUP
-
-
-AT_SETUP([Conditional/define directives (7)])
-AT_KEYWORDS([extensions directive])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION DIVISION.
-       PROGRAM-ID.    prog.
-       PROCEDURE      DIVISION.
-       >>IF A IS DEFINED
-       >>IF B IS DEFINED
-           CONTINUE
-           .
-       >>ELSE
-           CONTINUE
-           .
-       >>END-IF
-       >>END-IF
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [])
-AT_CLEANUP
-
-
-AT_SETUP([Conditional/define directives (8)])
-AT_KEYWORDS([extensions directive])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION DIVISION.
-       PROGRAM-ID.    prog.
-       PROCEDURE      DIVISION.
-       >>IF A IS DEFINED
-           CONTINUE
-           .
-       >>else
-           CONTINUE
-           .
-       >>eNd-If
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [])
-AT_CLEANUP
-
-
 AT_SETUP([Variable format])
 AT_KEYWORDS([extensions runmisc])
 
